# Get_Set_Database_Gui

Persons_Data/: CMakeLists.txt  Main.qml  Res.qrc  database.cpp  database.h  icon.rc  main.cpp
Persons_Data/qml/: List_Component.qml  MainView.qml  Models.qml  OptionsMenu.qml  SaveView.qml  WarningDialog.qml
